# Capex_AI

./: AGENTS.md  README.md  pyproject.toml  requirements.txt
configs/: schema.yaml
dev_utils/: print_json_for_llm_help.py
docs/: README.md  WORKING_CONTEXT.md
scripts/: analyze_orphans.py  chatbot.py  get_budget_by_budgetcode.py  get_multiasset_budget_by_wonum.py  get_projects_overview.py  get_weekly_budget_view.py  load_workbook.py  materialize_views.py  preflight_check.py  run_analysis.py  summarize_costs_by_wo.py  validate_relations.py
src/capex_ai/: __init__.py
src/capex_ai/analysis/: base.py  cost_summary_by_wo.py  orphan_records.py  registry.py  runner.py
src/capex_ai/io/: excel_loader.py
src/capex_ai/modeling/: budget_views.py  join_engine.py  multiasset_budget.py  projects_overview.py
src/capex_ai/models/: schema.py
src/capex_ai/validation/: relations.py
tests/: test_analysis_cost_summary_by_wo.py  test_analysis_orphan_records.py  test_analysis_registry_runner.py  test_chatbot.py  test_e2e_pipeline.py  test_excel_loader.py  test_join_engine.py  test_multiasset_budget.py  test_project_layout.py  test_projects_overview.py  test_projects_overview_real_workbook.py  test_relations_spec.py  test_runtime_readiness.py  test_schema_config.py
